h1. Version 0.1.6
March 2012

* Added more data to the display of a UI tree by breaking out the visitor code using the visitor pattern and delegate pattern.
* Added handlers for UIButtons and UILabels so that the print tree function can work better.
* Added label text, button titles, UIView tags, accessibility Identifiers, values and labels as attributes to be printed.

h1. Version 0.1.5
March 2012

* Switched in app report to avoid using the root view controller because not every app has one.

h1. Version 0.1.4
March 2012

* Fixed missing header. 
* Adjusted so that macros work in ARC projects.
* Added ARC based test project.

h1. Version 0.1.3
Febuary 2012

* Rewrote the class scanning to be more reliable when analysing classes for find mappings.
* Refactored the touch synthesis code.
* Added swipe gestures.

h1. Version 0.1.2
Feburary 2012

* Updated dUsefulStuff to obtain access to a better error handling routine.
* Added KVC complient view attribute analysis.
* Adding assert macros.
* Added new in app display of results.
* Injected SIStepMapping into implementation classes storage area before call so class can access it. Mainly for testing.
* Revamped output of reporting in log.
* Updated to use dNodi (replacement for DXPath).
* More work on UI utils.
* More work on macros. Added assert macros.
* Added shutdown button to in app report to shutdown Simon.
* Added a UI based report for viewing results.
* Lots more doco.
* Removed passing a file to the backpack startup macro. Not really that useful.
* Removed dependency on -all_load for categories as latest linkers no longer need it.
* Got search attributes working with KVC values for UIViews.
* Added basic shortcut macros for tapping.
* Added custom exceptions.

h1. Version 0.1.1
July 2011

* Brought in dXPath to handle XPath queries against a UI.
* Fixed bug in stripping story: prefix.

h1. Version 0.1.0
July 2011

* Initial release of code. See Readme.