@@ -4,6 +4,7 @@ March 2012
 * Added more data to the display of a UI tree by breaking out the visitor code using the visitor pattern and delegate pattern.
 * Added handlers for UIButtons and UILabels so that the print tree function can work better.
 * Added label text, button titles, UIView tags, accessibility Identifiers, values and labels as attributes to be printed.
+* Updated dNodi to 0.3.4 to fix issues with name clashes on properties of nodes.
 
 h1. Version 0.1.5
 March 2012
